# PermissionAPI

./: .clang-format  .gitignore  CMakeLists.txt  PermissionAPI.sln  PrepareLib.cmd  README.md  RELEASENOTE.md  UpdateSDK.cmd  xmake.lua
.github.del/workflows/: build.yml
.github/workflows/: build.yml
PermissionAPI/: CMakeLists.txt  Command.cpp  Data.cpp  Data.h  ExportAPI.cpp  Mod.cpp  Mod.h  PermissionAPI.h  PermissionAPI.vcxproj  PermissionAPI.vcxproj.filters  Resource.aps  Resource.rc  ScriptAPI.cpp  dllmain.cpp  framework.h  pch.h
PermissionAPI/Data/: Foundation.hpp  JsonHelper.hpp  PermAbility.hpp  PermGroup.hpp  PermMember.hpp  Permission.hpp  Role.hpp
PermissionScriptAPI/: Mod.cpp  PermissionScriptAPI.vcxproj  PermissionScriptAPI.vcxproj.filters  dllmain.cpp  framework.h  pch.h
